--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,7 +1,7 @@
 CMAKE_MINIMUM_REQUIRED(VERSION 3.5)
 PROJECT(WarPi)
 
-FIND_PACKAGE(Boost 1.54 COMPONENTS thread REQUIRED)
+FIND_PACKAGE(Boost 1.54 COMPONENTS thread filesystem REQUIRED)
 INCLUDE_DIRECTORIES(${Boost_INCLUDE_DIR})
 
 FIND_PACKAGE(PythonLibs REQUIRED)
@@ -15,3 +15,6 @@ TARGET_LINK_LIBRARIES(WarPi ${Boost_LIBRARIES} ${PYTHON_LIBRARIES} restclient-cp
 
 INSTALL(TARGETS WarPi
         RUNTIME DESTINATION bin)
+
+INSTALL(FILES config.json
+        DESTINATION /etc/WarPi)
